--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Integrated Generation</title>
-    <link rel="stylesheet" href="/myproject/integrated/assets/styles.css">
-    <link rel="shortcut icon" href="/myproject/integrated/assets/img/Logo PG 698.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://fauzansulthoni.github.io/integrated698/assets/styles.css">
+    <link rel="shortcut icon" href="https://fauzansulthoni.github.io/integrated698/assets/img/Logo PG 698.png" type="image/x-icon">
 </head>
 <body>
     <div id="background">
         <div class="container">
             <div id="logo-marhalah">
-                <img src="/myproject/integrated/assets/img/lambang-integrated.png" alt="">
+                <img src="https://fauzansulthoni.github.io/integrated698/assets/img/lambang-integrated.png" alt="">
             </div>
             <div id="tagline-marhalah">
                 <div class="integrated-tagline"><div id="written-animation">Integrated Generation </div><span class="integrated-tagline-2">Siswa Akhir KMI 2023</span></div>
@@ -29,8 +29,8 @@
                 <a class="link-drive" href="">Link Alternatif 10</a>
             </div>
             <div id="branding-flyer">
-                <img class="top-right-flyer" src="/myproject/integrated/assets/img/vector-smart-object-20.png" alt="">
-                <img class="bottom-left-flyer" src="/myproject/integrated/assets/img/golden-luxury-metal-texture-wave-white-6.png" alt="">
+                <img class="top-right-flyer" src="https://fauzansulthoni.github.io/integrated698/assets/img/vector-smart-object-20.png" alt="">
+                <img class="bottom-left-flyer" src="https://fauzansulthoni.github.io/integrated698/assets/img/golden-luxury-metal-texture-wave-white-6.png" alt="">
             </div>
             <div id="logo-1abad"></div>
         </div>
