--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="background">
         
-        <audio id="myAudio" src="https://fauzansulthoni.github.io/integrated698/assets/musik/ostdisco.mp3" preload="auto" autoplay></audio>
+        <audio id="myAudio" src="https://fauzansulthoni.github.io/integrated698/assets/musik/ostdisco.mp3" autoplay preload="auto"></audio>
             <div class="content">
                 <div id="logo-marhalah">
                     <img class="flip" src="https://fauzansulthoni.github.io/integrated698/assets/img/lambang-integrated.png" alt="">
